@@ -1,4 +1,5 @@
 features:
+GraphViz output
 training with conditional normalization - option to leave alone or assign uniform weights to arcs with zero counts for some input leaving some state (but often people like zeroing out unused arcs for pruning?)
 attach and preserve arbitrary labels to arcs (states already have their arbitrary names)
 'wildcard', 'except-state' and 'except-global' label for arcs - for input or output not seen leaving the state, or at all
